--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     })
     compile files('libs/processor.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.squareup:javapoet:1.9.0'
     testCompile 'junit:junit:4.12'
 }
 
