--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
     defaultConfig {
-        applicationId "personal.rowan.annotationprocessorexample"
+        applicationId "personal.rowan.pacifier"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
